cmake_minimum_required(VERSION 3.24)
project(14)

set(CMAKE_CXX_STANDARD 11)

add_executable(14 main.cpp SortedDoubleLinkedList.h Node.h Queue.h Virus.cpp Virus.h Lentivirus.cpp Lentivirus.h Papillomavirus.cpp Papillomavirus.h Mimivirus.cpp Mimivirus.h PopulationQueue.cpp PopulationQueue.h World.cpp World.h)
